--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,34 @@
 ﻿src/dist/
+src/build/
 src/*.egg-info/
-src/__pycache__/
-src/**/__pycache__/
-examples/__pycache__/
+**/__pycache__/
+
 .svn/
 .vscode
+
+examples/*.log
+testing/*.sh
+
+**/OLD
+**/*_old
+**/*_OLD
+**/*.OLD
+**/*.old
+**/*.bak
+**/*.DEACTIVATED
+**/*.SAVED
+OLD
+*_old
+*_OLD
+*.OLD
+*.old
+*.bak
+*.DEACTIVATED
+*.SAVED
+
+**/*.sh
+*.sh
+_tools/
+
+TEMP
+dist
