--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "jk_exceptionhelper"
+name = "jk_simplexml"
 dynamic = [ "version" ]
 authors = [
 	{ name = "Jürgen Knauth", email = "pubsrc@binary-overflow.de" },
